--- a/src/global.scss
+++ b/src/global.scss
@@ -1,11 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 
-
 /* Basic CSS for apps built with Ionic */
 @import "@ionic/angular/css/normalize.css";
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/display.css";
-
 
 /* Shared Input Style */
 .custom-input {
@@ -33,13 +31,19 @@
 
 /* Character Icons */
 .character-icon {
-  width: 56px;
-  height: 56px;
-  background-color: #2a0d45;
+  width: 60px;
+  height: 60px;
   border: 2px solid #9f3cff;
   border-radius: 9999px;
   padding: 4px;
   box-shadow: 0 0 10px rgba(159, 60, 255, 0.4);
+  cursor: pointer;
+}
+
+.character-selected {
+  background-color: #2a0d45;
+  border: 4px solid #ffffff;
+  cursor: default;
 }
 
 /* Button Base */
