--- a/src/app/pages/room/room.page.html
+++ b/src/app/pages/room/room.page.html
@@ -69,6 +69,7 @@
         </div>
 
         <div
+          *ngIf="chosenAction === 'CREATE'"
           style="
             display: flex;
             align-items: center;
