--- a/src/app/pages/room/room.page.html
+++ b/src/app/pages/room/room.page.html
@@ -97,6 +97,8 @@
           />
         </div>
 
+        <div class="error-message" *ngIf="errorMessage">{{ errorMessage }}</div>
+
         <button
           class="custom-btn"
           style="
