improve win lose animations

--- a/src/app/pages/game/game.page.html
+++ b/src/app/pages/game/game.page.html
@@ -107,7 +107,7 @@
           >
           <span *ngIf="winner === 'W'"
             >🌠
-            <span class="player-black-win"> {{ players.white }} </span> claimed
+            <span class="player-white-win"> {{ players.white }} </span> claimed
             the stars!</span
           >
           <span *ngIf="winner === null">🤝 It’s a stellar tie!</span>
